# topotoolbox3

./: .gitignore  .gitmodules  CHECKLIST.md  CITATION.cff  README.md  TODO.md  buildfile.m  toolboxOptions.m
.github/: latest_release.md
.github/workflows/: ci.yaml  release.yaml
bindings/: CMakeLists.txt  tt_excesstopography_fmm2d.c  tt_excesstopography_fmm3d.c  tt_excesstopography_fsm2d.c  tt_fillsinks.c  tt_flow_routing_d8_carve.c  tt_gradient8.c  tt_graphflood.c  tt_gwdt.c  tt_gwdt_computecosts.c  tt_has_topotoolbox.c  tt_hillshade.c  tt_hillshade_fused.c  tt_identifyflats.c  tt_lowerenv.c  tt_streamquad_trapz_f32.c  tt_streamquad_trapz_f64.c  tt_traverse_down_f32_add_mul.c  tt_traverse_down_f64_add_mul.c  tt_traverse_down_u8_or_and.c  tt_traverse_up_u8_or_and.c
images/: makettlogo.m
md/: function_overview.md  usersguide_1_intro.md  usersguide_1_intro.mlx  usersguide_2_ksn.md  usersguide_2_ksn.mlx  usersguide_3_mfd.md  usersguide_3_mfd.mlx
tests/: GRIDobj_test.m  testFLOWobj.m  testFlowAlgebra.m  testHasLibTopoToolbox.m  testKnickpoints.m  testReadGRIDobj.m  testSnapshot.m  topotoolbox3_test.m
toolbox/: Contents.m  functionSignatures.json  gettingStarted.mlx  info.xml  makehelppdf.mlx  showmethods.m  test.asc  tt2path.m  tthelp.m  ttupdate.m
toolbox/@DIVIDEobj/: DIVIDEobj.m  asymmetry.m  cleanedges.m  coord2ind.m  dist2node.m  divorder.m  getvalue.m  ind2coord.m  jctangle.m  jctcon.m  plot.m  plotc.m  removeshortdivides.m  shrink.m
toolbox/@FLOWobj/: FLOWobj.m  FLOWobj2GRIDobj.m  FLOWobj2M.m  FLOWobj2cell.m  clip.m  coord2ind.m  crop.m  dbasymmetry.m  dbentropy.m  dependencemap.m  drainagebasins.m  drainagebasinstats.m  find.m  flipdir.m  flowacc.m  flowconvergence.m  flowdistance.m  flowdivergence.m  flowpathextract.m  flowtime.m  flowvec.m  getoutlets.m  gradient.m  imposemin.m  ind2coord.m  influencemap.m  ismulti.m  mapfromnal.m  meltonruggedness.m  multi2single.m  plotdbfringe.m  propagatevaluesupstream.m  quantcarve.m  randomize.m  removesmallfractions.m  reweight.m  slopeareatool.m  streamorder.m  tfactor.m  updatetoposort.m  (+3 more)
toolbox/@FLOWobj/private/: createAuxiliaryTopo.m  dependencemap_mex.mexmaca64  findsteepestneighbor.m  flowdir.m  getPreSillPixels.m  routeflats.m  routegeodesic.m  tsort.m
toolbox/@GRIDobj/: GRIDobj.m  GRIDobj2ascii.m  GRIDobj2geotable.m  GRIDobj2geotiff.m  GRIDobj2im.m  GRIDobj2mat.m  GRIDobj2pm.m  GRIDobj2polygon.m  GRIDobj2rgb.m  acv.m  aggregate.m  arcslope.m  aspect.m  castshadow.m  cellarea.m  contour.m  coord2ind.m  coord2sub.m  createmask.m  crop.m  cropbyregion.m  curvature.m  demarea.m  demprofile.m  diffusion.m  dilate.m  dist2curve.m  dist2line.m  distance.m  elevateminima.m  erode.m  evansslope.m  excesstopography.m  fastcurvaturefit.m  fillsinks.m  filter.m  find.m  findcoord.m  getcoordinates.m  getextent.m  (+59 more)
toolbox/@GRIDobj/private/: GRIDobj2shape.m  builtincaller.m  createRasterFromASCIIGrid.m  createRasterFromFile.m  createRasterFromMat.m  georef2imref2d.m  makeColumnsStartFrom.m  openRasterDialog.m  rasterread.m  rasterwrite.m  wf2cellsize.m
toolbox/@PPS/: PPS.m  aggregate.m  as.m  cdftest.m  cluster.m  connectivity.m  convhull.m  cvloglinear.m  density.m  diameter.m  ecdf.m  extractvaluesaroundpoints.m  fitloglinear.m  gfun.m  hasduplicates.m  histogram.m  idw.m  intensity.m  mnoptimkp.m  modify.m  netdist.m  npoints.m  plot.m  plotc.m  plotdz.m  ploteffects.m  plotpoints.m  pointdistances.m  points.m  quadratcount.m  random.m  removeduplicates.m  removepoints.m  rhohat.m  roc.m  shapewrite.m  simulate.m  tlength.m  voronoi.m  wmplot.m
toolbox/@STREAMobj/: STREAMobj.m  STREAMobj2GRIDobj.m  STREAMobj2SWATHobj.m  STREAMobj2XY.m  STREAMobj2cell.m  STREAMobj2geotable.m  STREAMobj2kml.m  STREAMobj2latlon.m  STREAMobj2mapstruct.m  STREAMobj2shape.m  bifurcationratio.m  binarize.m  buffer.m  chiplot.m  chitransform.m  conncomps.m  crs.m  crsapp.m  crslin.m  cummaxupstream.m  cumsum.m  cumtrapz.m  densify.m  diff.m  disjunctdbs.m  distance.m  drainagedensity.m  extractconncomps.m  ezgetnal.m  fastscape.m  getlocation.m  getnal.m  getvalue.m  gradient.m  hillslopearea.m  identifyflats.m  imposemin.m  info.m  inpaintnans.m  interp.m  (+55 more)
toolbox/@STREAMobj/private/: ezgetnal.m  mustBeGRIDobjOrNal.m  mustBeGRIDobjOrNalOrEmpty.m
toolbox/@SWATHobj/: SWATHobj.m  SWATHobj2GRIDobj.m  SWATHobj2gds.m  applyfun.m  convert2latlon.m  getoutline.m  gettrace.m  mapswath.m  plot.m  plotdz.m  plotdzm.m  profiles.m  stat.m  swath2latlon.m  tidy.m
toolbox/DEMdata/: createTestDEM.m  testcase_DEM.mlx
toolbox/EGM96/: egm96heights.m
toolbox/GIStools/: clipshape.m  dpsimplify.m  geotiffextent.m  mapstruct2geotable.m  projectshape.m  zonalstats.m
toolbox/IOtools/: hydrosheds2FLOWobj.m  readexample.m  readme.md  readopenalti.m  readopentopo.m  roipicker.m  table2STREAMobj.m  ttcachedir.m  ttclearcache.m  xyz2GRIDobj.m
toolbox/apps/: crsapp.m  flowpathapp.m  mappingapp.m
toolbox/colormaps/: flowcolor.m  isolum.m  landcolor.m  magmacolor.m  readme.md  ttclr.m  ttclrr.m  ttcmap.m  ttscm.m  ttscmposter.m
toolbox/colormaps/private/: loadcmap.m
toolbox/docs/: publishtthelp2html.m
toolbox/docs/mlxfiles/: tt_gs_0.mlx  tt_gs_1.mlx  tt_gs_2.mlx  tt_gs_3.mlx  tt_gs_4.mlx  tt_product_page.mlx  ttfunctions.mlx  usersguide_0.mlx  usersguide_1_intro.mlx  usersguide_2_ksn.mlx  usersguide_3_mfd.mlx  usersguide_4_modify.mlx  usersguide_5_smoothing.mlx
toolbox/graphics/: ScaleBar.m  adjustgeoaspectratio.m  exaggerate.m  getextent.m  getix.m  letter2rgb.m  niceticks.m  num2rgb.m  padextent.m  setextent.m  xlinerel.m  ylinerel.m
toolbox/help/: usersguide_1_intro.m  usersguide_2_ksn.m
toolbox/internal/: M2FLOWobj.m  benchmarkComparisonPlot.m  createAuxiliaryTopo.m  estimateSizeFromM.m  geotable2mapstruct.m  getdistance.m  getdivide.m  getgriddedline.m  ginputc.m  haslibtopotoolbox.m  ixdsneighbors.m  ixdsneighbors_steepest.m  ixneighbors.m  label2poly.m  mapstruct2geotable.m  parseCRS.m  projectprofile.m  shape2nanpunctuatedcoords.m  wf2XY.m  wf2cellsize.m
toolbox/utilities/: roipicker.m  wf2XY.m  wf2cellsize.m
(+15 files in other folders)
